Prevent line wraps within the link wrapper

--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,7 @@ a {
 
 .link-wrapper {
     text-align: start;
+    white-space: nowrap;
 }
 
 .list {
